--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -7,15 +7,13 @@
 .search{
     font-size: 20px;
     font-weight: 600;
-    background-image: linear-gradient(to left, #553c9a, #b393d3);
-    color: transparent;
+    color: orange;
     -webkit-background-clip: text;
 }
 
 .enterBtn{
     font-size: 20px;
     font-weight: 600;
-    background-image: linear-gradient(to left, #553c9a, #b393d3);
-    color: transparent;
+    color: green;
     -webkit-background-clip: text;
 }
