--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -1,7 +1,10 @@
-.homepage{
-    font-size: 20px;
-    font-weight: 600;
-    -webkit-background-clip: text;
+@import url('https://fonts.googleapis.com/css2?family=Francois+One&family=Jost:wght@300;700&display=swap');
+
+.homepage {
+    background-image: url('../img/background.jpg');
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
 }
 
 .search{
@@ -16,4 +19,63 @@
     font-weight: 600;
     color: green;
     -webkit-background-clip: text;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    margin: 1% 0% 0% 2%;
+    width: 15%;
+}
+
+.loginBtn {
+    margin: 0% 1% 0% 0%;
+    border-radius: 50px;
+    background-color: white;
+    padding: 0.3%;
+    width: 8.5%;
+    border: 0px;
+    font-size: 23px;
+    font-family: 'Jost', sans-serif;
+    font-weight: 700;
+}
+
+.loginBtn:hover {
+    background-color: black;
+    cursor: pointer;
+    color: white;
+}
+
+.home-info {
+    color: white;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 65%;
+}
+
+.home-title {
+    font-size: 55px;
+    font-family: 'Francois One', sans-serif;
+    line-height: 57px;
+    mix-blend-mode: normal;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 0px;
+}
+
+.home-description {
+    margin-top: 5%;
+    font-size: 25px;
+    font-family: 'Jost', sans-serif;
+    font-weight: 100;
+    line-height: 30px;
+    mix-blend-mode: normal;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
