--- a/6998 Updated UI/css/index.css
+++ b/6998 Updated UI/css/index.css
@@ -152,3 +152,50 @@ body {
 .good-msg {
     color: green;
 }
+
+#nav-logout {
+    margin: 0% 1% 0% 0%;
+    border-radius: 50px;
+    background-color: white;
+    padding: 0.3%;
+    width: 8.5%;
+    border: 0px;
+    font-size: 23px;
+    font-family: 'Jost', sans-serif;
+    font-weight: 700;
+}
+
+#nav-logout:hover {
+    background-color: black;
+    cursor: pointer;
+    color: white;
+}
+
+#chatbot {
+    position: absolute;
+    width: 65px;
+    height: 65px;
+    right: 2%;
+    bottom: 4%;
+}
+
+#search-bar {
+    margin-top: 5%;
+    width: 65%;
+    height: 35%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 1.5%;
+    border-radius: 20px;
+    border: 0px;
+    font-family: 'Jost', sans-serif;
+    font-size: 23px;
+    line-height: 25px;
+    color: #909090;
+    background-image: url("../img/search.png");
+    background-position: 10px center;
+    background-repeat: no-repeat;
+    padding-left: 40px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
