--- a/6998 Updated UI/css/house.css
+++ b/6998 Updated UI/css/house.css
@@ -21,12 +21,17 @@ body {
 }
 
 #house-detail-container {
-    margin-top: 2%;
+    margin-top: 1%;
+}
+
+.house-detail-subimg {
+    width: 100%;
+    height: auto;
 }
 
 #house-detail-img {
     width: 100%;
-    height: 120%;
+    height: auto;
 }
 
 #house-upper-info {
@@ -37,4 +42,29 @@ body {
 .house-fav {
     width: 50px;
     height: 50px;
+}
+
+.subimg-col {
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
+
+.subimg-col img {
+    opacity: 0.8; 
+    cursor: pointer; 
+}
+
+.subimg-col img:hover {
+    opacity: 1;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.container {
+    position: relative;
 }
