--- a/6998 Updated UI/css/house.css
+++ b/6998 Updated UI/css/house.css
@@ -68,3 +68,23 @@ body {
 .container {
     position: relative;
 }
+
+#house-overview {
+    background-color: black;
+    font-family: 'Jost', sans-serif;
+    font-weight: 700;
+    color: white;
+    width: 20%;
+    float: left;
+    padding: 1%;
+    text-align: center;
+    font-size: 20px;
+}
+
+table, th, td {
+    border: none;
+}
+
+th, td {
+    padding: 10px;
+}
