--- a/6998 Updated UI/css/search.css
+++ b/6998 Updated UI/css/search.css
@@ -100,6 +100,14 @@ body {
     right: 5px;
 }
 
+.house-add {
+    width: 70px;
+    height: 69px;
+    position: absolute;
+    top: 70px;
+    right: 8px;
+}
+
 .house-rating {
     border-radius: 5px;
     width: 47px;
@@ -120,4 +128,26 @@ body {
     right: 8px;
     font-family: Jost;
     font-size: 17px;
+}
+
+#compare-btn {
+    margin: 0% 0% 0% 1.5%;
+    border-radius: 25px;
+    background-color: black;
+    padding: 0.8% 1.8% 0.8% 1.8%;
+    border: 0px;
+    font-size: 20px;
+    font-family: 'Jost', sans-serif;
+    font-weight: 700;
+    color: white;
+    cursor: pointer;
+}
+
+#compare-btn:hover {
+    background-color: white;
+    color: black;
+}
+
+#compare {
+    color: #707070; 
 }
