--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -14,6 +14,7 @@ body {
 #logo {
     margin: 1% 0% 0% 2%;
     width: 15%;
+    cursor: pointer;
 }
 
 #loginBtn {
@@ -153,7 +154,7 @@ body {
     color: green;
 }
 
-#nav-logout {
+#logout-btn {
     margin: 0% 1.5% 0% 0%;
     border-radius: 50px;
     background-color: white;
@@ -165,7 +166,7 @@ body {
     font-weight: 700;
 }
 
-#nav-logout:hover {
+#logout-btn:hover {
     background-color: black;
     cursor: pointer;
     color: white;
