--- a/frontend/css/house.css
+++ b/frontend/css/house.css
@@ -3,6 +3,12 @@ body {
     font-family: 'Jost', sans-serif;
 }
 
+#logo-after {
+    margin: 0%;
+    width: 15%;
+    cursor: pointer;
+}
+
 .menu-item {
     margin-right: 60%;
     font-size: 23px;
